WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255677
[GPU Process] (REGRESSION
262607@main
): Copy pixels of CGImage only if it is not a sub-image
https://bugs.webkit.org/show_bug.cgi?id=255677
Summary
[GPU Process] (REGRESSION 262607@main): Copy pixels of CGImage only if it is ...
Said Abou-Hallawa
Reported
2023-04-19 13:49:48 PDT
If the calculation of sizeInBytes in ShareableBitmap::createFromImagePixels() does not match ShareableBitmapConfiguration::sizeInBytes(), we should not copy the pixels of this CGImage. Otherwise ShareableBitmapConfiguration will falsely describe the data in the SharedMemory. In this case we should fallback to ShareableBitmap::createFromImageDraw().
Attachments
Add attachment
proposed patch, testcase, etc.
Said Abou-Hallawa
Comment 1
2023-04-19 13:50:50 PDT
rdar://108072383
Said Abou-Hallawa
Comment 2
2023-04-19 14:07:03 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12933
EWS
Comment 3
2023-05-12 13:08:28 PDT
Committed
264021@main
(58702859275c): <
https://commits.webkit.org/264021@main
> Reviewed commits have been landed. Closing PR #12933 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug