Cherry-pick 58702859275c. rdar://problem/108072383

[GPU Process] (REGRESSION 262607@main): Copy pixels of CGImage only if it is not a sub-image
    https://bugs.webkit.org/show_bug.cgi?id=255677
    rdar://108072383

    Reviewed by Simon Fraser.

    In ShareableBitmap::createFromImagePixels(), CGImage and its CGDataProvider
    may disagree about how many bytes are in the pixels buffers. CGImage is most
    likely a sub-image of another CGImage which inherits its meta data but not
    the full pixels buffer.

    In this case we should fallback to ShareableBitmap::createFromImageDraw().
    Ortherwise  ShareableBitmapConfiguration will falsely describe the data in the
    SharedMemory.

    * Source/WebKit/Shared/cg/ShareableBitmapCG.cpp:
    (WebKit::ShareableBitmap::createFromImagePixels):

    Canonical link: https://commits.webkit.org/264021@main
Identifier: 263319.485@safari-7616.1.14.11-branch